{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 316,
  "lineage": "b6c51b38-f0df-28e9-dd9e-1c1c421bf554",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "as94054_001_webservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdf94b25a9dc61db",
            "arn": "arn:aws:ec2:us-west-2:905418029802:instance/i-0e5fe41862814d916",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5fe41862814d916",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "as94054_tf2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab5c1858a23979fb",
            "private_dns": "ip-10-0-1-251.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_ip": "34.222.76.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:905418029802:key/655e10ec-22a4-4802-be74-21a65e86b2c1",
                "throughput": 125,
                "volume_id": "vol-0bf68b02f53de54d3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01104f31745f43f63",
            "tags": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "EC2 Instance for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tags_all": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "EC2 Instance for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b07fd845f66a9091"
            ]
          },
          "dependencies": [
            "aws_security_group.as94054_001_allow_80",
            "aws_subnet.as94054_001_pubsub",
            "aws_vpc.as94054_001",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "as94054_001_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418029802:internet-gateway/igw-00364b9b1761de30e",
            "id": "igw-00364b9b1761de30e",
            "owner_id": "905418029802",
            "tags": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Internet Gateway for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tags_all": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Internet Gateway for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "vpc_id": "vpc-058d08ba269886444"
          },
          "dependencies": [
            "aws_vpc.as94054_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "as94054_001_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418029802:route-table/rtb-01d4417c1a52a8dfc",
            "id": "rtb-01d4417c1a52a8dfc",
            "owner_id": "905418029802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00364b9b1761de30e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Route Table for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tags_all": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Route Table for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "timeouts": null,
            "vpc_id": "vpc-058d08ba269886444"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.as94054_001_ig",
            "aws_vpc.as94054_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as94054_001_rtb_public_44",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09172d8fa5b8863d4",
            "route_table_id": "rtb-01d4417c1a52a8dfc",
            "subnet_id": "subnet-01104f31745f43f63"
          },
          "dependencies": [
            "aws_internet_gateway.as94054_001_ig",
            "aws_route_table.as94054_001_rtb",
            "aws_subnet.as94054_001_pubsub",
            "aws_vpc.as94054_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "as94054_001_allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418029802:security-group/sg-0b07fd845f66a9091",
            "description": "This SG is created to access NGINX Service externally by Public IP addeess",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b07fd845f66a9091",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG for project as94054_001",
            "name_prefix": "",
            "owner_id": "905418029802",
            "revoke_rules_on_delete": false,
            "tags": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "This Security Group is created to allow open port 80 for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tags_all": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "This Security Group is created to allow open port 80 for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "timeouts": null,
            "vpc_id": "vpc-058d08ba269886444"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.as94054_001"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "as94054_001_privsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418029802:subnet/subnet-0da24ed59fbd96a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da24ed59fbd96a4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418029802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Private Subnet for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tags_all": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Private Subnet for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "vpc_id": "vpc-058d08ba269886444"
          },
          "dependencies": [
            "aws_vpc.as94054_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "as94054_001_pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418029802:subnet/subnet-01104f31745f43f63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01104f31745f43f63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418029802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Public Subnet for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tags_all": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "Public Subnet for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "vpc_id": "vpc-058d08ba269886444"
          },
          "dependencies": [
            "aws_vpc.as94054_001"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "as94054_001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418029802:vpc/vpc-058d08ba269886444",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044674c3b523cb99b",
            "default_route_table_id": "rtb-06ce17ae6be9954ec",
            "default_security_group_id": "sg-0c67e55696a7d5701",
            "dhcp_options_id": "dopt-0c1bf94ed88fecf9c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058d08ba269886444",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ce17ae6be9954ec",
            "owner_id": "905418029802",
            "tags": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "VPC for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            },
            "tags_all": {
              "Lab_Source": "UdemyWeb",
              "Managed_By": "Terraform",
              "Name": "VPC for project as94054_001",
              "Project": "tfcode_session_with_AmitSaha"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}